# split-free-backend

./: .dockerignore  .env.dev-sample  .env.prod-sample  .flake8  .gitignore  .pre-commit-config.yaml  .pre-push.sh  Dockerfile  Dockerfile.dev  Dockerfile.prod  Dockerfile.staging  LICENSE.txt  Makefile  README.md  aws_ec2_setup.sh  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  manage.py  mock_data.py  pyproject.toml  remarks  remove_mock_data.py  requirements-dev.txt  todo.txt
.github/workflows/: django-tests.yaml  master.yaml  qa.yaml
docker/: Dockerfile.dev  Dockerfile.prod  Dockerfile.staging  docker-compose.dev.yaml  docker-compose.prod.yaml
env/: dev-sample  prod.db-sample
nginx/: nginx.conf
requirements/: base.txt  dev.txt
scripts/: entrypoint.sh  production_data.py
settings/: base.py  staging.py
split_free_all/: __init__.py  admin.py  algo_debts.py  algo_ideal_transfers.py  apps.py  helpers.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
split_free_all/migrations/: 0001_initial.py  0002_expense_users_alter_expense_payer.py  0003_expense_title_alter_event_title.py  0004_idealtransfer.py  0005_balance_debt_group_remove_idealtransfer_event_and_more.py  0006_alter_expense_participants.py  0007_remove_balance_user_expense_currency_expense_date_and_more.py  0008_member_group_alter_group_members.py  0020_invitetoken.py  (+22 more)
split_free_backend/: asgi.py  conftest.py.py  manage.py  settings.py  urls.py  wsgi.py
templates/: confirmation_email_template.html
tests/: test_anon_auth.py  test_debts_calculation.py
(+70 files in other folders)
